--- a/text-display.html
+++ b/text-display.html
@@ -28,8 +28,9 @@
         <div class="content">
             今天是2025年8月13日 
         </div>
-        <p>今天你想主人了吗</p>
+        <p>今天你想主人了吗??</p>
     </div>
 </body>
 </html>
+
     
